# advent-of-code-24

./: .gitmodules  CMakeLists.txt  helper.py  main.cpp  test.py  test2.py  util.hpp
day01/: CMakeLists.txt  day01.cpp  day01.hpp  main.py
day02/: day02.cpp  day02.hpp  main.py
day03/: CMakeLists.txt  day03.cpp
day04/: CMakeLists.txt  day04.cpp  day04.hpp  main.py
day05/: CMakeLists.txt  day05.cpp  day05.hpp  main.py
day06/: CMakeLists.txt  day06.cpp  day06.hpp  main.py
day07/: CMakeLists.txt  day07.cpp  day07.hpp  main.py
day07cu/: CMakeLists.txt  day07.cpp  day07.cu  day07.hpp
day07cu_m/: CMakeLists.txt  day07.cpp  day07.cu  day07.hpp  main.py
day07p/: CMakeLists.txt  day07.cpp  day07.cu  day07.hpp
day08/: CMakeLists.txt  day08.cpp  day08.hpp  main.py
day09/: CMakeLists.txt  day09.cpp  day09.hpp  main.py
day10/: CMakeLists.txt  day10.cpp  day10.hpp  main.py
day11/: CMakeLists.txt  day11.cpp  day11.hpp  main.py
day12/: CMakeLists.txt  day12.cpp  day12.hpp  main.py
day13/: CMakeLists.txt  day0.hpp  day13.cpp  day13.hpp  main.py
day14/: CMakeLists.txt  day14.cpp  day14.hpp  main.py
day15/: CMakeLists.txt  day15.cpp  day15.hpp  main.py
day16/: CMakeLists.txt  day16.cpp  day16.hpp  main.py
day17/: CMakeLists.txt  day17.cpp  day17.hpp  input.txt  main.py
day18/: CMakeLists.txt  day18.cpp  day18.hpp  main.py
day19/: CMakeLists.txt  day19.cpp  day19.hpp  main.py
day20/: CMakeLists.txt  day20.cpp  day20.hpp  main.py
day21/: CMakeLists.txt  day21.cpp  day21.hpp  main.py
day22/: CMakeLists.txt  day22.cpp  day22.hpp  main.py
day23/: CMakeLists.txt  day23.cpp  day23.hpp  main.py
day24/: CMakeLists.txt  day24.cpp  day24.hpp  main.py  main2.py
day25/: CMakeLists.txt  day25.cpp  day25.hpp  main.py
template/: CMakeLists.txt  day0.cpp  day0.hpp  day00.cpp  day00.hpp  day01.cpp  day01.hpp  day03.cpp  day03.hpp
